# gsprint

./: .gitignore  CLAUDE.md  index.html  package.json
knowledge-base/: architecture.md  design.md  frameworks.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: channels.rs
src/config/: planning-steps.ts  sprint-phases.ts
src/hooks/: use-session-events.ts
src/stores/: issues.ts  sprints.ts  tickets.ts  ui.ts  workspace.ts
src/styles/: globals.css
src/views/: execution-view.tsx  planning-view.tsx
